cmake_minimum_required(VERSION 3.17)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode 2021_Sep/Sep_14th_524.cpp 2021_Sep/Sep_15th_212.cpp 2021_Sep/Sep_16th_36.cpp 2021_Sep/Sep_17th_292.cpp 2021_Sep/Sep_21th_58.cpp 2021_Sep/Sep_22th_725.cpp 2021_Sep/Sep_23th_326.cpp 2021_Sep/Sep_25th_583.cpp)
